# argus-pipeline

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pipeline-agent-mvp.docx  pyproject.toml
argus/: __init__.py  cli.py
argus/engine/: __init__.py  classifier.py  context.py  llm.py  pipeline.py
argus/outputs/: __init__.py  slack.py
argus/outputs/dashboard/: app.py
argus/rules/: __init__.py  dbt.py
argus/sdk/: __init__.py  agent.py  base.py  emitter.py
argus/sdk/analyzers/: __init__.py  base.py  dbt.py
argus/sdk/layers/: __init__.py  ingestion.py  load.py  transform.py
argus/storage/: __init__.py  sqlite.py
tests/: test_integration.py
tests/fixtures/: error_cases.py
tests/unit/: test_classifier.py  test_context.py  test_storage.py
